frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    project: hackmaze
spec:
  replicas: 4
  selector:
    matchLabels:
      app: react-frontend

  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: react-frontend
        role: frontend-role
    spec:
      containers:
        - name: frontend-contianer
          image: mostafaewida/hackmaze_frontend
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          volumeMounts:
            - name:  config-volume
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
              readOnly: true

          resources:
            limits:
              cpu: 0.5
            requests:
              cpu: 0.25 # gives 1/2 of the limit

      volumes:
        - name: config-volume
          configMap:
            name: frontend-config
