grafana-external-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-external-service
spec:
  type: ExternalName
  externalName: grafana.monitoring.svc.cluster.local
